--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lodash.get": "^4.4.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-navigation": "^3.11.0",
     "react-redux": "^5.1.1",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
