--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react-dom": "^16.6.3",
     "react-navigation": "^3.11.0",
     "react-redux": "^5.1.1",
+    "react-redux-connect": "^0.1.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
